--- a/assets/locale/localization_fr.json
+++ b/assets/locale/localization_fr.json
@@ -89,5 +89,10 @@
   "key_enter_customer_phone_no": "தொலைபேசி எண் உள்ளிடவும் *",
   "key_enter_customer_whatsapp_no": "வாட்ஸ்அப் எண் உள்ளிடவும் *",
   "key_add_customer": "வாடிக்கையாளரைச் சேர்க்கவும்",
-  "key_customer_add": "வாடிக்கையாளர் சேர்"
+  "key_customer_add": "வாடிக்கையாளர் சேர்",
+  "key_customers": "வாடிக்கையாளர்கள்",
+  "key_name": "பெயர்",
+  "key_address": "முகவரி",
+  "key_bill": "பில்",
+  "key_search": "தேடல்"
 }
