UPDATED_PENDING_BALANCE_LOGIC_INTEGRATED

--- a/assets/locale/localization_fr.json
+++ b/assets/locale/localization_fr.json
@@ -95,5 +95,6 @@
   "key_address": "முகவரி",
   "key_bill": "பில்",
   "key_search": "தேடல்",
-  "key_product_status": "Give product active or inactive status"
+  "key_product_status": "Give product active or inactive status",
+  "key_old_balance": "பழைய கடன்"
 }
