FRUITBILLING_DESIGN_PART_INTEGRATED

--- a/assets/locale/localization_fr.json
+++ b/assets/locale/localization_fr.json
@@ -39,7 +39,7 @@
   "key_product_code": "பொருளின் குறியீடு",
   "key_product_cost": "பொருளின் விலை",
   "key_product_stock": "பொருளின் பங்கு",
-  "key_user_product_list": "தயாரிப்புகள்",
+  "key_user_product_list": "பொருட்கள்",
   "key_dismiss": "நிராகரி",
   "key_password_reset": "கடவுச்சொல் வெற்றிகரமாக மீட்டமை.",
   "key_no_network_con": "நெட்வொர்க் இணைப்பு இல்லை. இணையம் அல்லது வைஃபை உடன் இணைக்கவும்",
@@ -52,7 +52,7 @@
   "key_cost": "விலை",
   "key_enter_kilogram": "கே.ஜி.",
   "key_price": "மொத்தம்",
-  "key_clear": "அழி",
+  "key_clear": "நீக்கு",
   "key_bill_preview": "முன்னோட்டம் பில்",
   "key_save_bill": "பில் சேமிக்கவும்",
   "key_bill_preview_hint": "பில் முன்னோட்டம்",
@@ -66,7 +66,7 @@
   "key_added_cart": "வண்டியில் சேர்க்கப்பட்டது. தயவுசெய்து சரிபார்க்கவும்",
   "key_already_in_cart": "தயாரிப்பு ஏற்கனவே வண்டியில் உள்ளது",
   "key_select_kilos": "தொடர கிலோகிராம் தேர்ந்தெடுக்கவும்",
-  "key_product": "தயாரிப்பு",
+  "key_product": "பொருட்கள்",
   "key_product_costs": "விலை",
   "key_kg": "கிலோ",
   "key_total": "மொத்தம்",
@@ -77,7 +77,7 @@
   "key_enter_product_kg": "பொருளின் கிலோ உள்ளிடவும் *",
   "key_save_product": "சேமி",
   "key_product_kg": "பொருளின் கிலோ",
-  "key_product_add": "தயாரிப்பு சேர்",
+  "key_product_add": "பொருட்கள்",
   "key_customer_name": "வாடிக்கையாளர் பெயர்",
   "key_customer_bill_name": "பில்லிங் பெயர்",
   "key_customer_address": "வாடிக்கையாளர் முகவரி்",
@@ -88,13 +88,26 @@
   "key_enter_customer_address": "வாடிக்கையாளர் முகவரி் உள்ளிடவும் *",
   "key_enter_customer_phone_no": "தொலைபேசி எண் உள்ளிடவும் *",
   "key_enter_customer_whatsapp_no": "வாட்ஸ்அப் எண் உள்ளிடவும் *",
-  "key_add_customer": "வாடிக்கையாளரைச் சேர்க்கவும்",
-  "key_customer_add": "வாடிக்கையாளர் சேர்",
+  "key_add_customer": "சேமி",
+  "key_customer_add": "வாடிக்கையாளர்",
   "key_customers": "வாடிக்கையாளர்கள்",
   "key_name": "பெயர்",
   "key_address": "முகவரி",
   "key_bill": "பில்",
   "key_search": "தேடல்",
   "key_product_status": "Give product active or inactive status",
-  "key_old_balance": "பழைய கடன்"
+  "key_old_balance": "பழைய கடன்",
+  "key_billing": "பில்லிங்",
+  "key_dashboard": "டாஷ்போர்டு",
+  "key_welcome": "வணக்கம்",
+  "key_items": "பொருட்கள்",
+  "key_overall_selled_price": "ஒட்டுமொத்த விற்பனை விலை",
+  "key_overall_received": "வரவு",
+  "key_overall_pending": "நிலுவை",
+  "key_editing": "திருத்து",
+  "key_delete": "நீக்கு",
+  "key_bills": "பில்கள்",
+  "key_customer_edit": "வாடிக்கையாளரைத் திருத்து",
+  "key_customer_edit_title": "திருத்துதல்",
+  "key_are_you_delete": "நீங்கள் நிச்சயமாக நீக்குகிறீர்களா?"
 }
